<resources>
    <string name="app_name">BaseLibrary</string>
    <string name="cancel">取消</string>
    <string name="cancel2">不再提示</string>
    <string name="submit">确定</string>
    <string name="tips">提示</string>
    <string name="tips_message">这是一条提示信息！</string>
    <string name="loading_message">玩命加载中...</string>
    <string name="downloading">正在下载中...</string>
    <string name="cancle_download">取消下载</string>
    <string name="back_download">后台下载</string>
    <string name="choose">请选择</string>
    <string name="please_input">请输入</string>

    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="share">分享到站外：</string>
    <string name="wxhy">微信好友</string>
    <string name="pyq">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>

    <string name="load_end">------我是有底线的------</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
