<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:padding="14dp"
        android:text="@string/tips"
        android:textColor="@color/text_title"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/downloading"
        android:textColor="@color/text_content"
        android:textSize="16sp" />

    <common.baselibrary.baseview.numberprogressbar.NumberProgressBar
        android:id="@+id/number_progressbar"
        style="@style/NumberProgressBar_Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/activity_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/dialog_left_button_bg"
            android:gravity="center"
            android:text="@string/cancle_download"
            android:textColor="@drawable/textcolor_pickerview_cancel_btn"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/activity_line" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/dialog_right_button_bg"
            android:gravity="center"
            android:text="@string/back_download"
            android:textColor="@drawable/textcolor_pickerview_submit_btn"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>